tests/Frontend/inputs/invalid/invalid_3.qasm
OPENQASM 2.0;

// Error: Unterminated string
include "qelib1.inc;

qreg a[3];
creg b[3];